--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
 }
 :root {
   --background-color: #1f2937;
+  --white-color: #e5e7eb;
+  --primary-blue: #3b82f6;
 }
 body {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
@@ -28,7 +30,7 @@ nav ul {
 nav ul li {
   list-style: none;
   font-size: 1.2rem;
-  color: #e5e7eb;
+  color: var(--white-color);
   padding: 1em;
   cursor: pointer;
 }
@@ -39,13 +41,11 @@ nav ul li {
 
 nav ul li:nth-child(2) {
   margin-left: auto;
-  /* background-color: red; */
 }
 
 main {
   color: white;
-  background-color: #1f2937;
-  /* border: 2px solid yellow; */
+  background-color: var(--background-color);
   padding: 3em 0;
 }
 .wrapper {
@@ -54,7 +54,7 @@ main {
   display: flex;
   justify-content: end;
   align-items: center;
-  /* gap: 1em; */
+  gap: 2em;
 }
 
 .wrapper div {
@@ -87,7 +87,7 @@ main button {
   border-radius: 10px;
   margin: 1em 0;
   color: white;
-  background-color: #3b82f6;
+  background-color: var(--primary-blue);
 }
 
 /* -----------------article----------------------- */
@@ -107,7 +107,7 @@ article > h3 {
 .box {
   height: 150px;
   width: 150px;
-  border: 3px solid blue;
+  border: 3px solid var(--primary-blue);
   border-radius: 10px;
 }
 .box-info {
@@ -124,7 +124,7 @@ article section {
 
 .quote {
   padding: 5em 0;
-  background-color: #e5e7eb;
+  background-color: var(--white-color);
 }
 
 .quote h2 {
@@ -150,7 +150,7 @@ article section {
 }
 .action-box {
   border-radius: 10px;
-  background-color: #3b82f6;
+  background-color: var(--primary-blue);
   padding: 3em 2em;
   display: flex;
   gap: 2em;
@@ -162,20 +162,20 @@ article section {
   font-size: 1.5rem;
 }
 .action-description {
-  /* font-size: 1rem */
   color: #e5e7eb;
 }
 
 .action-box button {
   background-color: transparent;
-  padding: 0.5em 2em;
+  padding: 1em 3em;
   border-radius: 10px;
-  border: 1px solid white;
+  border: 2px solid white;
   color: white;
+  font-weight: bold;
 }
 
 footer {
-  background-color: #1f2937;
+  background-color: var(--background-color);
   color: white;
   padding: 2em;
   text-align: center;
@@ -193,8 +193,5 @@ footer {
   }
   .boxes {
     flex-direction: column;
-  }
-  body {
-    background-color: cadetblue;
   }
 }
